# PETScHPCBench

./: .gitignore  @makefile  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  hpc_petsc_bench.c  hpc_petsc_bench.cpp  hpc_slepc_bench.c  makefile  sbatch.sh  script.sh
